RESOLVED FIXED309777
REGRESSION(307450@main): Crash resizing canvas for after webglcontextlost event
https://bugs.webkit.org/show_bug.cgi?id=309777
Summary REGRESSION(307450@main): Crash resizing canvas for after webglcontextlost event
Kimmo Kinnunen
Reported 2026-03-12 03:38:00 PDT
REGRESSION(307450@main): Crash resizing canvas for after webglcontextlost event
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-12 03:38:06 PDT
Kimmo Kinnunen
Comment 2 2026-03-12 03:38:41 PDT
Kimmo Kinnunen
Comment 3 2026-03-12 03:59:40 PDT
EWS
Comment 4 2026-03-17 05:47:04 PDT
Committed 309401@main (bff80081bbf1): <https://commits.webkit.org/309401@main> Reviewed commits have been landed. Closing PR #60447 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.