REGRESSION(307450@main): WebGL: Crash resizing canvas after losing WebGL context due to many contexts https://bugs.webkit.org/show_bug.cgi?id=309777 rdar://172265758

Reviewed by Dan Glastonbury.

Avoid accessing WebGLDefaultFramebuffer::size() when context is lost,
in didUpdateCanvasSizeProperties(), transferToImageBuffer().

Prior fix (webkit.org/b/309777, 308389@main, 673b8d7495af) applied to
lost contexts that did not destroy the underlying context.

* LayoutTests/webgl/lose-context-after-context-lost-expected.txt:
* LayoutTests/webgl/lose-context-after-context-lost.html:
* Source/WebCore/html/canvas/WebGL2RenderingContext.idl:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::drawingBufferToPixelBuffer):
(WebCore::WebGLRenderingContextBase::transferToImageBuffer):
(WebCore::WebGLRenderingContextBase::didUpdateCanvasSizeProperties):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::simulateEventForWebGLContext):
(WebCore::Internals::requestedGPU):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/309401@main